# reg_territory

./: README.md
src/: .env.example  .gitignore  main.py  pyproject.toml
src/api/: dao.py  model.py  router.py  schemas.py
src/settings/: base.py  constants.py  database.py
